# mimosa

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.sample.toml  flake.nix  install.sh  package.nix  shell.nix
.github/workflows/: release-on-demand.yml  releases.yml
src/: account.rs  cli.rs  config.rs  keyring.rs  lib.rs  main.rs
src/backend/: backend.rs  de.rs  mod.rs
src/password/: delete.rs  get.rs  mod.rs  read.rs  remove.rs  set.rs  write.rs
src/store/: de.rs  keyutils.rs  macos.rs  mod.rs  secret-service.rs  store.rs  windows.rs
