[package]
name = "mimosa"
description = "CLI to manage secrets"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.87"
edition = "2021"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["cli", "password", "keyring", "keychain", "credential"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/mimosa"
repository = "https://github.com/pimalaya/mimosa"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["dbus-secret-service", "command"]

# Keyring backends
#
keyring = ["dep:keyring-core"]
dbus-secret-service = ["keyring", "dep:dbus-secret-service-keyring-store"]
apple-native = ["keyring", "dep:apple-native-keyring-store"]
windows-native = ["keyring", "dep:windows-native-keyring-store"]

# Shell command backend
#
command = ["dep:io-process", "pimalaya-toolbox/command"]

# Vendored (D-Bus)
#
vendored = ["dbus-secret-service-keyring-store?/crypto-openssl"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
log = "0.4"
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["config", "terminal"] }
serde = { version = "1", features = ["derive"] }

# Keyring
keyring-core = { version = "0.7", optional = true }
dbus-secret-service-keyring-store = { version = "0.3", default-features = false, features = ["crypto-rust"], optional = true }
apple-native-keyring-store = { version = "0.2", default-features = false, features = ["keychain"], optional = true }
windows-native-keyring-store = { version = "0.5", optional = true }

# Command
io-process = { version = "0.0.2", default-features = false, features = ["expand", "serde", "std"], optional = true }
