[package]
name = "mimosa"
description = "CLI to manage passwords"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]
keywords = ["cli", "password", "keyring", "keychain", "credential"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/mimosa"
repository = "https://github.com/pimalaya/mimosa"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["dbus-secret-service", "apple-keychain", "windows-credential-manager"]

# Keyring backends
#
dbus-secret-service = ["dep:dbus-secret-service-keyring-store"]
zbus-secret-service = ["dep:zbus-secret-service-keyring-store"]
keyutils = ["dep:linux-keyutils-keyring-store"]
apple-keychain = ["dep:apple-native-keyring-store"]
windows-credential-manager = ["dep:windows-native-keyring-store"]

# Vendored (D-Bus)
#
vendored = ["dbus-secret-service-keyring-store?/vendored"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2", default-features = false, features = ["keychain"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "0.2", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3", default-features = false, features = ["crypto-rust"], optional = true }
zbus-secret-service-keyring-store = { version = "0.2", default-features = false, features = ["rt-async-io-crypto-rust"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "0.5", optional = true }

[dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
keyring-core = "0.7"
log = "0.4"
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["config", "terminal"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
